--- a/blog/201801098.md
+++ b/blog/201801098.md
@@ -1,7 +1,7 @@
 ---
 title: vue-devtools安装及使用 
 author: GXQi
-description: 1. github下载：git clone https://github.com/vuejs/vue-devtools2. 安装依赖：
+description: 1. github下载：git clone https://github.com/vuejs/vue-devtools2. 安装依赖：...
 date: 2019-05-21
 time: 10:49
 archives: 前端
